--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i> 
                 </button>
-                <a class="navbar-brand" href="#page-top">CP Flask App</a>
+                <a class="navbar-brand" href="#page-top">Portfolio of AJ Thomas founder of Spidey Web Designs</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
